<resources>
    <string name="reader_link_unavailable">Не удалось открыть указанное место в этом переводе. Проверьте ссылку и подключение или откройте сохранённую главу.</string>
</resources>
